fixed the bio box alignment issue

--- a/src/front/styles/parents.css
+++ b/src/front/styles/parents.css
@@ -7,7 +7,7 @@
 
 #bio {
   margin-top: 20px;
-  margin-left: 170px;
+  margin-left: 190px;
   width: 480px;
   height: 200px;
 }
